--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <main>
 
       <article>
-        <p1 style="background-color: green ; color: goldenrod;">Welcome to my page, are you sleepy?</p1>
-        <p2 style="background-color: rgb(62, 62, 110) ; color: red;">Would you like to have a cup of coffee?</p2>
-        <p3 style="background-color: silver ; color: black;">How do you prefer your coffee?</p3>
-        <p4 style="background-color: yellow ; color: red;">Are you good now?</p4>
+        <p1 style="background-color: green ; color: goldenrod;">Welcome to my page, What is your name?</p1>
+        <p2 style="background-color: rgb(62, 62, 110) ; color: red;">What is your favorite season in the year?</p2>
+        <p3 style="background-color: silver ; color: black;">What is your favorite dish?</p3>
+        <p4 style="background-color: yellow ; color: red;">How do you spend your time?</p4>
       </article>
       
 
